fix knockout and schedule
